--- a/infrastruct/ansible/roles/ghostty/defaults/main.yml
+++ b/infrastruct/ansible/roles/ghostty/defaults/main.yml
@@ -1,12 +1,10 @@
 ---
 # Ghostty configuration defaults
 
-# Build settings
-ghostty_version: "v1.2.3"
-ghostty_src_dir: "{{ ansible_env.HOME }}/.local/src/ghostty"
+# Build settings (Docker-based)
+ghostty_version: "v1.1.3"
+ghostty_build_dir: "/tmp/ghostty-build"
 zig_version: "0.13.0"
-zig_install_dir: "{{ ansible_env.HOME }}/.local/zig"
-zig_download_url: "https://ziglang.org/download/{{ zig_version }}/zig-linux-x86_64-{{ zig_version }}.tar.xz"
 
 # Theme: supports light:theme,dark:theme syntax for auto-switching
 ghostty_theme: "light:Catppuccin Latte,dark:Catppuccin Mocha"
