feat(ansible): add chrome:// URL handler for text file links
- Registers chrome:// protocol handler using xdotool workaround
- Enables clicking chrome:// URLs in text files to open in Chrome
- No app menu clutter - handler runs silently (NoDisplay=true)

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -34,3 +34,7 @@
       tags: logseq
     - role: remarkable_mouse
       tags: remarkable_mouse
+    - role: kdiskmark
+      tags: kdiskmark
+    - role: chrome-bookmarks
+      tags: chrome-bookmarks
