--- a/infrastruct/ansible/roles/ghostty/defaults/main.yml
+++ b/infrastruct/ansible/roles/ghostty/defaults/main.yml
@@ -10,7 +10,7 @@ zig_version: "0.13.0"
 ghostty_theme: "light:Catppuccin Latte,dark:Catppuccin Mocha"
 
 # Font settings
-ghostty_font_family: "JetBrains Mono"
+ghostty_font_family: "JetBrainsMono Nerd Font"
 ghostty_font_size: 12
 
 # Window appearance
@@ -28,6 +28,7 @@ ghostty_gtk_wide_tabs: true
 
 # Shell integration
 ghostty_shell_integration: "detect"
+ghostty_command: ""
 
 # Performance
 ghostty_scrollback_limit: 10000
