feat(ansible): enable wezterm on local host

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -32,6 +32,8 @@
       tags: ghostty
       vars:
         ghostty_command: "{{ ansible_env.HOME }}/.local/bin/nu"
+    - role: wezterm
+      tags: wezterm
     - role: jabref
       tags: jabref
     - role: postgres
