feat(planner): Implement Standalone YouTrack Fetch (QUEST-5)

--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./src:/app/src
+      - ./dist:/app/dist
       - ${HOME}/.config/rsrch:/app/config
       - ${HOME}/.rsrch/profiles:/app/profiles
     environment:
