--- a/agents/rsrch/windmill/wmill.yaml
+++ b/agents/rsrch/windmill/wmill.yaml
@@ -26,3 +26,5 @@ gitBranches:
     workspaceId: knowlage
   enhance-agents-shared-library-12655918295314503708:
     overrides: {}
+  review/tools-140:
+    overrides: {}
