feat(ansible): Update antigravity-mcp role for Windmill bridge
- Add jules_windmill MCP server config to defaults/main.yml
- Add build task for jules-mcp-windmill bridge in tasks/main.yml
- Update mcp_config.json.j2 template to include jules-windmill server
- Fix setup_local.yml hosts target to 'all' for local execution

This configures Antigravity to use the new Windmill-based Jules tools
instead of the broken jules-mcp Python client.

--- a/infrastruct/ansible/roles/antigravity-mcp/defaults/main.yml
+++ b/infrastruct/ansible/roles/antigravity-mcp/defaults/main.yml
@@ -53,6 +53,14 @@ mcp_servers:
     enabled: false
     _disabledReason: "Antigravity coerces numeric page_token to int, breaking pagination"
 
+  jules_windmill:
+    enabled: true
+    # Point to the compiled Go bridge
+    command: "/home/sim/Obsi/Prods/01-pwf/agents/jules-go/bin/jules-mcp-windmill"
+    args: []
+    env:
+      PATH: "/home/sim/.local/bin:{{ ansible_env.PATH }}"
+
   gitkraken:
     enabled: true
     disabledTools:
