fix(rsrch): update Gemini response selectors for current UI
TOOLS-154: Rsrch Gemini response selector timeout after CDP port fix

- Updated selectors.yaml with new response selectors:
  - model-response (primary container element)
  - structured-content-container (formatted AI output)
  - .model-response-text (text content container)
  - .response-content (response body wrapper)
- Removed deprecated .message-content selector (no longer exists in Gemini UI)
- Updated hardcoded selectors in research() and researchWithStreaming() methods

--- a/agents/rsrch/src/selectors.yaml
+++ b/agents/rsrch/src/selectors.yaml
@@ -161,7 +161,12 @@ gemini:
     app: 'chat-app, .input-area, textarea, div[contenteditable="true"], rich-textarea, .chat-input, [data-input-container]'
     input: 'div[contenteditable="true"], textarea, input[type="text"]'
     send: 'button[aria-label*="Send"], button[aria-label*="Odeslat"], button[data-testid="send-button"], button[type="submit"], button:has(svg[class*="send"]), button:has(path[d*="M2.01"]), div[contenteditable] ~ button'
-    response: "model-response"
+    # Response container - multiple fallbacks for UI changes
+    # model-response: Primary container element
+    # structured-content-container: Element containing formatted AI output
+    # .model-response-text: Class on the text content container
+    # .response-content: Wrapper div for response body
+    response: "model-response, structured-content-container, .model-response-text, .response-content"
     history: '.chat-history-list, nav[aria-label="Rozhovory"], nav[aria-label="Conversations"]'
     newChat: 'button[aria-label*="New chat"], button[aria-label*="Nový chat"], button:has-text("New chat"), button:has-text("Nový chat"), [data-testid="new-chat-button"]'
   sidebar:
