feat(rsrch): enable VNC support on port 5902
TOOLS-154: Enable VNC access for manual debugging

- Added start-vnc.sh script to launch Xvfb, Fluxbox, and x11vnc
- Updated Dockerfile to install VNC tools and use start-vnc.sh
- Updated Nomad job to expose port 5902 (mapped to 5900) and set HEADLESS=false

--- a/agents/rsrch/Dockerfile
+++ b/agents/rsrch/Dockerfile
@@ -11,10 +11,11 @@ RUN sed -i 's|file:../shared|file:./shared|g' package.json
 
 # Build shared library first (required for CI where dist/ is missing)
 RUN cd shared && npm install && npm run build
+RUN echo "=== SHARED DIST INDEX.D.TS ===" && cat shared/dist/index.d.ts || echo "No shared dist"
 
 # Install dependencies (browsers are already in the image)
-# Install xvfb for headed mode support
-RUN apt-get update && apt-get install -y xvfb && rm -rf /var/lib/apt/lists/*
+# Install xvfb, x11vnc, and fluxbox for headed mode support with VNC
+RUN apt-get update && apt-get install -y xvfb x11vnc fluxbox && rm -rf /var/lib/apt/lists/*
 RUN npm install
 
 # Copy rsrch source files
@@ -22,11 +23,16 @@ COPY rsrch/src ./src/
 COPY rsrch/tsconfig.json ./
 COPY rsrch/*.sh ./
 
+RUN echo "=== NODE MODULES SHARED INDEX.D.TS ===" && cat node_modules/@agents/shared/dist/index.d.ts || echo "No symlink"
+
 # Build TypeScript
 RUN npm run build
 
-# Expose HTTP server port
-EXPOSE 3000
+# Expose HTTP server port and VNC port
+EXPOSE 3000 5900
 
-# Default: Run the HTTP server
-CMD ["node", "dist/index.js", "serve"]
+# Make startup script executable
+RUN chmod +x start-vnc.sh
+
+# Default: Run the VNC startup script which launches the server
+CMD ["./start-vnc.sh"]
