--- a/agents/shared/package.json
+++ b/agents/shared/package.json
@@ -10,7 +10,7 @@
     },
     "dependencies": {
         "axios": "^1.13.2",
-        "chalk": "^5.6.2",
+        "chalk": "^4.1.2",
         "commander": "^14.0.2",
         "dotenv": "^16.3.1",
         "falkordb": "^6.4.1",
@@ -19,13 +19,15 @@
         "langfuse": "^3.0.0",
         "uuid": "^9.0.0",
         "winston": "^3.19.0",
-        "zod": "^4.3.5"
+        "zod": "^4.3.5",
+        "playwright": "^1.50.0"
     },
     "devDependencies": {
         "@types/jest": "^30.0.0",
         "@types/js-yaml": "^4.0.9",
         "@types/node": "^20.19.28",
         "@types/uuid": "^9.0.0",
+        "jest": "^30.2.0",
         "jest": "^30.2.0",
         "ts-jest": "^29.4.6",
         "typescript": "^5.3.0"
