fix(shared): add exports to support deep imports in Docker

--- a/agents/shared/package.json
+++ b/agents/shared/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "description": "Shared utilities for agent infrastructure",
     "main": "dist/index.js",
+    "exports": {
+        ".": "./dist/index.js",
+        "./*": "./dist/*.js"
+    },
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc",
