Allow local browser launch only via FORCE_LOCAL_BROWSER env var

--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -14,18 +14,14 @@ services:
       - USER_DATA_DIR=/app/user-data
     restart: unless-stopped
 
-  perplexity-server:
+  rsrch:
     build:
       context: ..
       dockerfile: rsrch/Dockerfile
-    image: perplexity-researcher:latest
-    container_name: perplexity-server
+    image: rsrch:latest
+    container_name: rsrch
     ports:
-<<<<<<< HEAD
-      - "${PORT:-3030}:${PORT:-3030}"
-=======
-      - "${PORT:-3001}:${PORT:-3001}"
->>>>>>> origin/pr-20
+      - "${PORT:-3000}:${PORT:-3000}"
       - "5905:5900" # Expose VNC from rsrch container (5901 in use)
     volumes:
       - ./data:/app/data
@@ -34,11 +30,7 @@ services:
       - ${HOME}/.config/rsrch:/app/config
       - ${HOME}/.rsrch/profiles:/app/profiles
     environment:
-<<<<<<< HEAD
-      - PORT=${PORT:-3030}
-=======
-      - PORT=${PORT:-3001}
->>>>>>> origin/pr-20
+      - PORT=${PORT:-3000}
       - WINDMILL_TOKEN=${WINDMILL_TOKEN}
       # - BROWSER_CDP_ENDPOINT=http://chromium:9223 # Disabled for Local Mode
       - BROWSER_CDP_ENDPOINT=http://chromium:9223
