--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./src:/app/src
-      - ./dist:/app/dist
+      # - ./dist:/app/dist
       - ${HOME}/.config/rsrch:/app/config
       - ${HOME}/.rsrch/profiles:/app/profiles
     environment:
@@ -38,14 +38,14 @@ services:
       - AUTH_FILE=/app/config/auth.json
       - PROFILES_DIR=/app/profiles
       - FALKORDB_HOST=falkordb
-      - DISPLAY=:99
+      # - DISPLAY=:99
     depends_on:
       - chromium
       - falkordb
     extra_hosts:
       - "host.docker.internal:host-gateway"
     ipc: host
-    command: sh -c "rm -f /tmp/.X99-lock && Xvfb :99 -screen 0 1280x1024x24 -ac & export DISPLAY=:99; node dist/index.js serve"
+    command: sh -c "exec node dist/rsrch/src/index.js serve"
     restart: unless-stopped
 
   falkordb:
