--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -14,7 +14,13 @@
     "serve": "ts-node src/server.ts",
     "debug:notebook": "ts-node src/debug-notebooklm.ts",
     "build": "tsc -p tsconfig.json",
-    "test": "vitest run"
+    "test": "vitest run",
+    "docs:api": "ts-node scripts/generate_api_docs.ts > docs/API_REFERENCE.qmd",
+    "docs:cli": "ts-node scripts/generate_cli_docs.ts > docs/CLI_REFERENCE.qmd",
+    "docs:config": "ts-node scripts/generate_config_docs.ts > docs/CONFIG_REFERENCE.qmd",
+    "docs:arch": "ts-node scripts/generate_architecture.ts > docs/ARCHITECTURE.qmd",
+    "docs:render": "quarto render docs/index.qmd && quarto render docs/API_REFERENCE.qmd && quarto render docs/CLI_REFERENCE.qmd && quarto render docs/CONFIG_REFERENCE.qmd && quarto render docs/ARCHITECTURE.qmd",
+    "docs:all": "npm run docs:api && npm run docs:cli && npm run docs:config && npm run docs:arch && npm run docs:render"
   },
   "keywords": [],
   "author": "",
